# triton-shared

./: .gitignore  pyproject.toml
tests/: test_client.py  test_detection.py  test_embedding.py  test_text_embedding.py
triton_shared/: __init__.py
triton_shared/client/: __init__.py  errors.py  grpc.py  protocol.py
triton_shared/inference/: __init__.py  description.py  detection.py  embedding.py  image_utils.py  schemas.py  text_embedding.py
triton_shared/models/: __init__.py  embedder.py
