[project]
name = "triton-shared"
version = "0.1.0"
description = "Shared Triton Inference Server client library for SAS + CTS"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=11.0",
    "tokenizers>=0.20",
]

[project.optional-dependencies]
triton = [
    "tritonclient[all]>=2.51.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
include = ["triton_shared*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
